# Storage_PubSub_Crud

./: App.py  download.py  publish.py  pyproject.toml  subscribe.py  upload.py
templates/: confirm_delete.html  create_item.html  download.html  index.html  update_item.html
